# avantia

./: Dockerfile  README.md  compose.yml  pyproject.toml
src/: db.py  main.py
